force-app/main/default/objects/GetFeedback_Survey_Response__c/GetFeedback_Survey_Response__c.object-meta.xml
<CustomObject>
    <label>GetFeedback Survey Response</label>
    <nameField>
        <label>GetFeedback Survey Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GetFeedback Survey Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>