force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/accessibility_and_Responiveness__c.field-meta.xml
<CustomField>
    <fullName>accessibility_and_Responiveness__c</fullName>
    <label>Accessibility and Responsiveness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>