force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GetFeedback Survey Responses</relationshipLabel>
    <relationshipName>GetFeedback_Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>