force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Accountant__c.field-meta.xml
<CustomField>
    <fullName>Accountant__c</fullName>
    <formula>Account__r.Owner.FirstName + &quot; &quot; +  Account__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accountant</label>
    <type>Text</type>
</CustomField>