force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Accountant_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Assigned__c</fullName>
    <description>The Accountant assigned for the service being reviewed</description>
    <label>Accountant Assigned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>