force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Accountant_Merge_Field__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Merge_Field__c</fullName>
    <label>Accountant Merge Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>