force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Accounting_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Knowledge__c</fullName>
    <label>Accounting Knowledge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>