force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Active_Owner__c.field-meta.xml
<CustomField>
    <fullName>Active_Owner__c</fullName>
    <label>Active Owner</label>
    <length>2</length>
    <type>Text</type>
</CustomField>