force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>GetFeedback Survey Responses</relationshipLabel>
    <relationshipName>GetFeedback_Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>