force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Courtesy_Friendliness__c.field-meta.xml
<CustomField>
    <fullName>Courtesy_Friendliness__c</fullName>
    <label>Courtesy &amp; Friendliness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>