force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Event_ID__c</fullName>
    <description>The ID of the Event in Salesforce</description>
    <label>Event ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>