force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Feedback_to_CEO__c.field-meta.xml
<CustomField>
    <fullName>Feedback_to_CEO__c</fullName>
    <label>Feedback to CEO</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>