force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>GetFeedback Survey Responses</relationshipLabel>
    <relationshipName>GetFeedback_Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>