force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <formula>IF(  Recommendation__c &gt; 8, 1,
   IF(  Recommendation__c &lt; 6,  -1, 0) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>