force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <formula>Account__r.Onboarding_Survey_Owner_Office__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Office</label>
    <type>Text</type>
</CustomField>