force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Original_Accountant__c.field-meta.xml
<CustomField>
    <fullName>Original_Accountant__c</fullName>
    <label>Original Accountant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>