force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Overall_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Overall_Satisfaction__c</fullName>
    <description>Name of Survey: Introduction to your Customer Success Associate: Discover Call (1 Question)
Question Number: 1
Question Text: How satisfied were you with your Customer Success Associate call?
Sub-Question: N/A</description>
    <label>Overall Satisfaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>