force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Portal_Event_Owner__c.field-meta.xml
<CustomField>
    <fullName>Portal_Event_Owner__c</fullName>
    <description>The Owner of the Event in the Portal</description>
    <label>Portal Event Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>