force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Rating_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rating_Reason__c</fullName>
    <label>Rating Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>