force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Reassignment__c.field-meta.xml
<CustomField>
    <fullName>Reassignment__c</fullName>
    <label>Reassignment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>