force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/test_user__c.field-meta.xml
<CustomField>
    <fullName>test_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>test user</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GetFeedback_Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>