force-app/main/default/objects/GetFeedback_Survey_Response__c/validationRules/Lock_Current_Accountant_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Current_Accountant_Field</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED( Original_Accountant__c ),
NOT(ISBLANK(PRIORVALUE( Original_Accountant__c ))))</errorConditionFormula>
    <errorMessage>Can&apos;t change original accountant</errorMessage>
</ValidationRule>