force-app/main/default/objects/GetFeedback_Survey_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Satisfaction_Level_1_5__c</columns>
    <columns>Portal_Event_Owner__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>